overflow fix

--- a/biostar/static/biostar.base.less
+++ b/biostar/static/biostar.base.less
@@ -745,6 +745,7 @@ pre {
 
 .content {
   min-height: 8em;
+  overflow: auto;
 }
 
 .context {
